Implemented reset length